# arx

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/arx-api/: Cargo.toml
crates/arx-api/src/: auth.rs  idempotency.rs  lib.rs  mcp.rs  rate_limit.rs  routes.rs  server.rs  webhook.rs
crates/arx-api/tests/: e2e.rs
crates/arx-core/: Cargo.toml
crates/arx-core/src/: client.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  model.rs  output.rs
crates/arx-engine/: Cargo.toml
crates/arx-engine/src/: build.rs  container.rs  database.rs  deploy.rs  lib.rs
crates/arx-proxy/: Cargo.toml
crates/arx-proxy/src/: caddy.rs
migrations/: 20240101000000_init.sql  20240102000000_v2.sql
src/: main.rs
