[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Agent-first self-hosted deployment platform"
repository = "https://github.com/arx-deploy/arx"
homepage = "https://github.com/arx-deploy/arx"

[workspace.dependencies]
arx-core = { path = "crates/arx-core" }
arx-engine = { path = "crates/arx-engine" }
arx-proxy = { path = "crates/arx-proxy" }
arx-api = { path = "crates/arx-api" }

axum = "0.8"
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
is-terminal = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
tar = "0.4"
tokio-stream = "0.1"
ipnet = "2"

[package]
name = "arx-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "arx"
path = "src/main.rs"

[dependencies]
arx-core.workspace = true
arx-engine.workspace = true
arx-proxy.workspace = true
arx-api.workspace = true
bollard.workspace = true
clap.workspace = true
is-terminal.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
toml.workspace = true
hex.workspace = true
ring.workspace = true
