[package]
name = "arx-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "API server for arx deployment platform"
repository.workspace = true

[dependencies]
arx-core.workspace = true
arx-engine.workspace = true
arx-proxy.workspace = true
axum.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
hmac.workspace = true
tracing.workspace = true
uuid.workspace = true
ipnet.workspace = true
reqwest.workspace = true
