[package]
name = "arx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for arx deployment platform"
repository.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
is-terminal.workspace = true
rand.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
