[package]
name = "arx-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reverse proxy integration for arx deployment platform"
repository.workspace = true

[dependencies]
arx-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
